force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/QtC_Mig_CreditMemo_Temp_Table__c.object-meta.xml
<CustomObject>
    <label>QtC Mig CreditMemo Temp Table</label>
    <nameField>
        <label>QtC Mig CreditMemo Temp Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QtC Mig CreditMemo Temp Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>