force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Billing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_2__c</fullName>
    <label>Billing Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>