force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Billing_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addresses__c</fullName>
    <label>Billing Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>