force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>