force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>