force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Shipping_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Addresses__c</fullName>
    <label>Shipping Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>