force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>