force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Shipping_country_code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_country_code__c</fullName>
    <label>Shipping country code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>