force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/T_InvoiceNum__c.field-meta.xml
<CustomField>
    <fullName>T_InvoiceNum__c</fullName>
    <formula>IF(CONTAINS(Created_From__c, &apos;Invoice #&apos;) = TRUE, RIGHT(Created_From__c, LEN(Created_From__c)- LEN(&apos;Invoice #&apos;)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T_InvoiceNum</label>
    <type>Text</type>
</CustomField>